Refactor project name from "DevToolbox v2" to "DevToolbox" across documentation and codebase

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DevToolbox v2 — A Developer’s Personal Lab</title>
+  <title>DevToolbox — A Developer’s Personal Lab</title>
   <meta name="description" content="Thoughtful tools, beautifully engineered. A developer's personal lab of utilities, patterns, and design craft." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
