--- a/tools.html
+++ b/tools.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tools — DevToolbox v2</title>
+  <title>Tools — DevToolbox</title>
   <meta http-equiv="refresh" content="0; url=./index.html#/tools" />
   <link rel="canonical" href="./index.html#/tools" />
 </head>
