--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" class="theme-dark">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta
+    http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.tailwindcss.com https://cdn.jsdelivr.net; font-src 'self' https://fonts.gstatic.com; connect-src 'self'; img-src 'self' data:;"
+  />
   <title>DevToolbox — A Developer’s Personal Lab</title>
   <meta name="description" content="Thoughtful tools, beautifully engineered. A developer's personal lab of utilities, patterns, and design craft." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
